--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 MONGO_ROOT_USER=root
 MONGO_ROOT_PASSWORD=password
 MONGO_PORT=27017
-MONGODB_URI=mongodb://${MONGO_ROOT_USER}:${MONGO_ROOT_PASSWORD}@db:${MONGO_PORT}/mobiis-db?authSource=admin
+MONGODB_URI=mongodb://root:password@db:27017/mobiis-db?authSource=admin
 PORT=3000
 JWT_SECRET=secret_here
